# Area-Target-Scanner

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  GUIDE.md  LICENSE  README.md  TEST_PLAN.md  analyze_scan.py  docker-compose.yml  extract_other_texture.py  fix_mesh.py  generate_audio.py  optimize_uv.py  pyproject.toml  regenerate_features_db.py  render_model.py  requirements.txt  retexture.py  test_cross_dataset.py  test_cross_session_matrix.py  test_cross_session_native.py  test_cross_session_native_parallel.py  test_fast_uv.py  test_slam_sequence.py  test_vectorized_pipeline.py  test_xatlas_native.cpp  test_xatlas_quality.py  test_xatlas_speed.py  test_xatlas_welded.py  unity_test_log.txt  verify_localization.py  verify_scandata.py  verify_texture.py  verify_texture_v2.py
docs/: async-localization-design.md  cross-session-comparison-report.md  ios-device-test-guide.md
native_visual_localizer/: CMakeLists.txt  build_ios.sh  build_macos.sh
native_visual_localizer/include/: visual_localizer.h
native_visual_localizer/src/: visual_localizer.cpp  visual_localizer_impl.cpp  visual_localizer_impl.h  visual_localizer_stub.c
processing_pipeline/: __init__.py  cli.py  feature_db.py  feature_extraction.py  models.py  optimized_pipeline.py  optimizer_client.py  pipeline.py  utils.py  uv_unwrap.py
tests/: conftest.py  test_akaze_consistency_filter.py  test_akaze_fallback.py  test_asset_export.py  test_bug_condition_cross_session.py  test_bug_condition_exploration.py  test_cross_component_integration.py  test_e2e.py  test_feature_db.py  test_feature_extraction.py  (+26 more)
(+216 files in other folders)
